--- a/skypro-music/package.json
+++ b/skypro-music/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-music",
+  "name": "3a79971f-9aa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,17 +7,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
-    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
-    "react-loading-skeleton": "^3.3.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier —write .",
+    "lint:js": "eslint ./src/**/*.js"
   },
   "eslintConfig": {
     "extends": [
@@ -38,12 +38,11 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.22.20",
-    "eslint": "^8.50.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.0.3"
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.1",
+    "stylelint": "^15.10.2",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-prettier": "^4.0.2"
   }
 }
